# Cmake_C_CXX_Template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SOFTWARE_REQUIRED.md  makefile
cmake/: clang-format.cmake  clang-tidy.cmake  env_header.cmake  sanitizer.cmake
cmake/cpp.in/: config.hpp.in
src/: CMakeLists.txt  main.cpp  main.h
